--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -11,16 +12,19 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "hover.css": "^2.3.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.22",
     "react-google-maps": "^9.4.5",
     "react-keyframes": "^0.2.3",
     "react-lottie": "^1.2.3",
     "react-places-autocomplete": "^7.3.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
+    "react-scroll": "^1.7.9",
+    "react-slick": "^0.23.1",
     "react-social-login": "^3.4.10"
   },
   "scripts": {
