--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.28.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.2",
+    "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4",
     "sequelize": "^6.3.5"
   },
