--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "davicoa <alvarado_z@outlook.com>",
   "license": "MIT",
   "dependencies": {
+    "@barba/core": "^2.9.7",
     "axios": "^0.20.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.0",
@@ -19,6 +20,7 @@
     "mysql2": "^2.2.2",
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4",
+    "react-scroll": "^1.8.1",
     "sequelize": "^6.3.5"
   },
   "scripts": {
