--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "hover.css": "^2.3.2",
+    "mercadopago": "^1.5.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-facebook-login": "^4.1.1",
