--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
     "axios": "^0.20.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.19.0",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "jwt-simple": "^0.5.6",
+    "mercadopago": "^1.5.1",
     "moment": "^2.28.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.2",
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.4",
+    "react-ga": "^3.3.0",
+    "react-redux": "^7.2.2",
     "react-scroll": "^1.8.1",
+    "react-text-mask": "^5.4.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sequelize": "^6.3.5"
   },
   "scripts": {
