mercado pago y arreglos estéticos de la landing

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "scripts": {
     "start": "nodemon index.js",
-    "build": "cd client && npm build"
+    "build": "cd client && npm build",
+    "watch": "npx nodemon /index"
   }
 }
